initial commit for LAT

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,12 @@
 ---
-title: About
-description: 'EigenExplorer is a community-driven data platform for EigenLayer AVS'
+title: EigenExplorer
+description: 'Data and DeFi systems for EigenLayer'
 icon: star-shooting
 ---
+
+EigenExplorer comprises a set of data and DeFi systems designed and built to help users explore and interact with EigenLayer AVS and operators.
+
+While EigenLayer defines a set of on-chain and off-chain protocols for Ethereum economic security provision, AVS and operator registration, and slashing, EigenExplorer develops systems that enhance the usability of these protocols.
 
 <img
     src='/public/images/docs/introduction/intro-light.png'
